unpackaged/main/default/objects/Customer_Financial_Analysis__c/Customer_Financial_Analysis__c.object-meta.xml
<CustomObject>
    <label>Customer Financial Analysis</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Financial Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Financial Analysiss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>