unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Corporate_Tax__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Tax__c</fullName>
    <formula>Total_Annual_Profit__c * 0.09</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>