unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Free_Cash_Flow_Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Free_Cash_Flow_Annual_Target__c</fullName>
    <label>Free Cash Flow Annual(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>