unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Free_Cash_Flow_Cumulative_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Free_Cash_Flow_Cumulative_Discounted__c</fullName>
    <label>Free Cash Flow Cumulative(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>