unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Line_description__c.field-meta.xml
<CustomField>
    <fullName>Line_description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>