unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>FA-{000000}</displayFormat>
    <label>Financial Analysis Name</label>
    <type>AutoNumber</type>
</CustomField>