unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Net_Present_Value_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Net_Present_Value_Discounted__c</fullName>
    <label>Net Present Value(Discounted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>