unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Net_Present_Value_Target__c.field-meta.xml
<CustomField>
    <fullName>Net_Present_Value_Target__c</fullName>
    <label>Net Present Value(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>