unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Payback_2__c.field-meta.xml
<CustomField>
    <fullName>Payback_2__c</fullName>
    <label>Payback 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>