unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Payback_Ratio_1__c.field-meta.xml
<CustomField>
    <fullName>Payback_Ratio_1__c</fullName>
    <label>Payback Ratio 1 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>