unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Price_Per_Month_including_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Month_including_VAT__c</fullName>
    <label>Price Per Month including VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>