unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Customer_Quote__c</referenceTo>
    <relationshipLabel>Customer Financial Analysiss</relationshipLabel>
    <relationshipName>Customer_Financial_Analysiss</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>