unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Request_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Request_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Mapping</label>
    <referenceTo>ET_Request_Mapping__c</referenceTo>
    <relationshipLabel>Customer Financial Analysiss</relationshipLabel>
    <relationshipName>Customer_Financial_Analysiss</relationshipName>
    <type>Lookup</type>
</CustomField>