unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Tot_Ann_price_exc_vat_for_vehicle_fuel__c.field-meta.xml
<CustomField>
    <fullName>Tot_Ann_price_exc_vat_for_vehicle_fuel__c</fullName>
    <label>Tot Ann price exc vat for vehicle &amp;fuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>