unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Cost__c</fullName>
    <label>Total Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>