unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Annual_Pric_excluding_VAT_Manpower__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Pric_excluding_VAT_Manpower__c</fullName>
    <label>Total Annual Pric excluding VAT Manpower</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>