unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Annual_Price_including_VAT_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Price_including_VAT_Target__c</fullName>
    <label>Total Annual Price including VAT(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>