unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Annual_Priceincluding_VAT_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Priceincluding_VAT_Vehicle__c</fullName>
    <label>Total Annual Priceincluding VAT Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>