unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_annual_Profit_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_annual_Profit_Target_Price__c</fullName>
    <label>Total annual Profit(Target Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>