unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment__c</fullName>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>