unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Other_Emp_Profits_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Emp_Profits_Target__c</fullName>
    <label>Total Other Emp Profits Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>