unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Profit_used_for_calc_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit_used_for_calc_Target__c</fullName>
    <label>Total Profit used for calc(Target)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>