unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Total_Vehicle_Profits__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_Profits__c</fullName>
    <label>Total Vehicle Profits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>