unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/VAT_Amount_Target_Prices__c.field-meta.xml
<CustomField>
    <fullName>VAT_Amount_Target_Prices__c</fullName>
    <label>VAT Amount(Target Prices)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>