unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/VAT_on_Other_Emp_Expenses__c.field-meta.xml
<CustomField>
    <fullName>VAT_on_Other_Emp_Expenses__c</fullName>
    <label>VAT on Other Emp Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>