unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Workforce_End_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Workforce_End_of_Service__c</fullName>
    <label>Workforce End of Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>