unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Workforce_Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workforce Quote Item</label>
    <referenceTo>Customer_Workforce_Quote_Item__c</referenceTo>
    <relationshipLabel>Customer Financial Analysiss</relationshipLabel>
    <relationshipName>Customer_Financial_Analysiss</relationshipName>
    <type>Lookup</type>
</CustomField>