unpackaged/main/default/objects/Customer_Financial_Analysis__c/fields/Working_Capital__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital__c</fullName>
    <formula>((( Total_Annual_Cost__c -
( VALUE(Vehicle_Quote_Item__r.Vehicle_Depreciation__c) + Vehicle_Quote_Item__r.Vehicle_Financing__c + Corporate_Tax__c +
Vehicle_Quote_Item__r.VAT_Cost__c + Workforce_Quote_Item__r.End_of_Service__c ))/365)* Vehicle_Quote_Item__r.Credit_Period__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>